--- a/src/App.css
+++ b/src/App.css
@@ -6,10 +6,14 @@
 
 .board {
   background-color: white;
+  /* background-color: #282c34; */
   width: 560px;
   height: 560px;
   display: flex;
   flex-wrap: wrap;
+  padding: 10px;
+  border-radius: 3%;
+  border: 5px solid black;
 }
 
 .board img {
@@ -17,3 +21,13 @@
   height: 70px;
 }
 
+.score_board {
+  border: 2px solid white;
+  color: white;
+  margin: 50px;
+  padding: 20px;
+  border-radius: 4%;
+  height: 12vh;
+  font-family: 'Courier New', Courier, monospace;
+  text-align: center;
+}
